<resources>
    <string name="app_name">e游</string>
    <string name="action_settings">Settings</string>

    <string name="activity_welcome">欢迎界面</string>
    <string name="contentDescription">.</string>
    /**城市选择界面*/
    <string name="title_activity_city">CityActivity</string>
    <string name="city_location">当前城市：</string>
    <string name="city_activity_button_string">正在定位&#8230;</string>
    <string name="title_activity_museum">MuseumActivity</string>
    <!-- 用于上拉加载更多ListView -->
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="play_pause">播放或暂停</string>
    /***/
    <string name="download_manage">管理</string>
    <string name="download_cityList">下载</string>
    <string name="search_view_museum_hint">按名字搜索</string>

    <string name="museum_open_time">开馆时间:</string>
    <string name="museum_important_alert">重要提示:</string>
    <string name="museum_address"> 地  址 :</string>
    <string name="museum_consumption_per"> 人  均 :</string>
    <string name="museum_book_ticket">订票</string>
    <string name="museum_has_downloaded">已下载</string>
    <string name="museum_not_downloaded">未下载</string>
    <string name="title_activity_museum_home_page">MuseumHomePageActivity</string>
    <string name="home_page_guide_button_text">导览</string>

    <string name="dialog_check_box">不在提示</string>
    <string name="dialog_button_true">确定</string>
    <string name="dialog_button_false">取消</string>
    /*侧滑菜单*/
    <string name="drawer_guide_mode_hand_text">手动模式</string>
    <string name="drawer_guide_mode_auto_text">自动模式</string>
    <string name="drawer_download_center_text">下载中心</string>
    <string name="drawer_collect_text">收藏</string>
    <string name="drawer_city_choose_text">城市选择</string>
    <string name="drawer_about_us_text">关于我们</string>
    <string name="drawer_setting_text">设置</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_guide">GuideActivity</string>

    <!-- 导览界面 -->
    <string name="frag_hamburger_multi_angle">多角度</string>
    <string name="frag_hamburger_nearly_exhibit">附近展品</string>
    <!--  设置界面  -->
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_download">下载中心</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_filter">专题筛选</string>
    <string name="title_activity_collection">收藏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  专题界面  -->
    <string name="activity_collection_has_choose">已选择</string>
    <string name="activity_collection_hot">热门</string>
    <string name="activity_collection_years">年代</string>
    <string name="activity_collection_material">材质</string>
    <string name="activity_collection_use">用途</string>

    <!--  搜索界面  -->
    <string name="title_activity_search_exhibit">展品搜索</string>
    <string name="search_exhibit_hint">输入搜索内容</string>
    <string name="search_delect_descriction">清除</string>


    <!-- 地图 -->
    <string name="poi_custom_title">用户自定义</string>
    <string name="poi_custom_name">名字</string>
    <string name="poi_custom_description">描述信息</string>
    <string name="poi_custom_phone">电话</string>
    <string name="poi_custom_site">网页链接</string>
    <string name="poi_custom_id">ID</string>
    <string name="error_id">请输入该自定义POI点的ID</string>
    <string name="map_error">加载地图发生错误\n\n请将有效的地图文件(.obf)拷贝至SD卡中的osmap目录中，然后重试。</string>
    <string name="set_route_start">设置为起点</string>
    <string name="set_route_end">设置为终点</string>
    <string name="del_poi">删除该POI点</string>
    <string name="poi_show">显示POI信息点</string>
    <string name="poi_hidden">不显示POI信息点</string>
    <string name="route">显示路径规划</string>
    <string name="amenity_load_finish">POI信息检索完毕</string>
    <string name="map_finish">地图完成显示，即将销毁</string>
    <string name="map_load_finish">地图加载完成</string>
    <string name="map_index_finish">地图检索完成</string>
    <string name="map_init">地图开始初始化</string>

    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--自定义listview -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


</resources>
