<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sliding_top_bar_height"
        android:background="@color/orange"
        android:gravity="center_vertical">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_download_center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            style="@style/normal_image_view"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_download_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_download_center_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_collect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            style="@style/normal_image_view"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_collect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_collect_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_city_choose"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            style="@style/normal_image_view"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_city_choose" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_city_choose_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_about_us"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            style="@style/normal_image_view"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_about_us_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_setting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            style="@style/normal_image_view"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/iv_drawer_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/drawer_setting_text" />
    </LinearLayout>
</LinearLayout>
