<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@mipmap/bg_dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">
        <TextView
            android:id="@+id/dialog_title"
            android:text="设置蓝牙"
            android:textSize="@dimen/dialog_title_textSize"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/dialog_content"
            android:paddingLeft="@dimen/simple_4dp"
            android:paddingRight="@dimen/simple_4dp"
            android:layout_width="wrap_content"
            android:textSize="@dimen/dialog_content_textSize"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/dialog_check_box"
            android:layout_width="wrap_content"
            android:textSize="@dimen/dialog_content_textSize"
            android:textColor="@color/darkGray"
            android:layout_height="wrap_content"
            android:text="@string/dialog_check_box"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/dialog_button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/dialog_button_textSize"
            android:text="@string/dialog_button_false"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/dialog_button_false"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="@dimen/dialog_button_textSize"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button_true"
            android:textColor="@color/white" />
    </LinearLayout>




</LinearLayout>
